# scratchpad4k

./: CMakeLists.txt  README.md
src/: main.cpp  main_window.cpp  main_window.h  window_msg_dispatcher.cpp  window_msg_dispatcher.h
src/helpers/: error_message.cpp
